Fix for empty signed/training

--- a/notebooks/03_anatomy_of_a_quantizer.ipynb
+++ b/notebooks/03_anatomy_of_a_quantizer.ipynb
@@ -248,10 +248,10 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[-0.1000,  0.1000,  0.1000, -0.1000],\n",
-       "         [ 0.1000,  0.1000, -0.1000,  0.1000],\n",
-       "         [ 0.1000,  0.1000, -0.1000,  0.1000],\n",
-       "         [ 0.1000,  0.1000,  0.1000, -0.1000]], grad_fn=<MulBackward0>),\n",
+       "(tensor([[-0.1000,  0.1000, -0.1000,  0.1000],\n",
+       "         [ 0.1000,  0.1000,  0.1000,  0.1000],\n",
+       "         [ 0.1000, -0.1000,  0.1000,  0.1000],\n",
+       "         [-0.1000, -0.1000, -0.1000,  0.1000]], grad_fn=<MulBackward0>),\n",
        " tensor(0.1000, grad_fn=<AbsBinarySignGradFnBackward>),\n",
        " tensor(0.),\n",
        " tensor(1.))"
@@ -293,10 +293,10 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[-0.1000,  0.1000, -0.1000, -0.1000],\n",
-       "         [ 0.1000,  0.1000,  0.1000,  0.1000],\n",
-       "         [-0.1000, -0.1000,  0.1000,  0.1000],\n",
-       "         [-0.1000, -0.1000, -0.1000, -0.1000]], grad_fn=<MulBackward0>),\n",
+       "(tensor([[ 0.1000,  0.1000,  0.1000,  0.1000],\n",
+       "         [ 0.1000, -0.1000,  0.1000,  0.1000],\n",
+       "         [ 0.1000,  0.1000,  0.1000, -0.1000],\n",
+       "         [-0.1000,  0.1000,  0.1000, -0.1000]], grad_fn=<MulBackward0>),\n",
        " tensor(0.1000, grad_fn=<AbsBinarySignGradFnBackward>),\n",
        " tensor(0.),\n",
        " tensor(1.))"
@@ -343,10 +343,10 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[-1.,  1., -1.,  1.],\n",
-       "         [-1., -1.,  1., -1.],\n",
-       "         [-1., -1.,  1.,  1.],\n",
-       "         [ 1., -1., -1., -1.]], grad_fn=<MulBackward0>),\n",
+       "(tensor([[-1.,  1.,  1., -1.],\n",
+       "         [-1.,  1., -1.,  1.],\n",
+       "         [-1.,  1.,  1.,  1.],\n",
+       "         [ 1.,  1.,  1.,  1.]], grad_fn=<MulBackward0>),\n",
        " tensor(1., grad_fn=<AbsBinarySignGradFnBackward>),\n",
        " tensor(0.),\n",
        " tensor(1.))"
@@ -380,10 +380,10 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.1000, -0.1000, -0.1000, -0.1000],\n",
-       "         [ 0.1000, -0.1000, -0.1000, -0.1000],\n",
-       "         [ 0.1000,  0.1000,  0.1000, -0.1000],\n",
-       "         [-0.1000,  0.1000,  0.1000, -0.1000]], grad_fn=<MulBackward0>),\n",
+       "(tensor([[ 0.1000, -0.1000, -0.1000,  0.1000],\n",
+       "         [ 0.1000,  0.1000, -0.1000,  0.1000],\n",
+       "         [-0.1000,  0.1000,  0.1000, -0.1000],\n",
+       "         [-0.1000, -0.1000,  0.1000,  0.1000]], grad_fn=<MulBackward0>),\n",
        " tensor(0.1000, grad_fn=<AbsBinarySignGradFnBackward>),\n",
        " tensor(0.),\n",
        " tensor(1.))"
@@ -447,37 +447,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "QuantTensor(value=tensor([[[[-0.1000,  0.1000, -0.1000],\n",
-       "          [ 0.1000,  0.1000,  0.1000],\n",
-       "          [-0.1000,  0.1000, -0.1000]],\n",
-       "\n",
-       "         [[-0.1000, -0.1000, -0.1000],\n",
-       "          [ 0.1000,  0.1000, -0.1000],\n",
-       "          [ 0.1000, -0.1000,  0.1000]],\n",
-       "\n",
-       "         [[ 0.1000, -0.1000,  0.1000],\n",
-       "          [-0.1000, -0.1000,  0.1000],\n",
-       "          [-0.1000, -0.1000,  0.1000]]],\n",
-       "\n",
-       "\n",
-       "        [[[ 0.1000,  0.1000,  0.1000],\n",
-       "          [ 0.1000, -0.1000, -0.1000],\n",
-       "          [-0.1000, -0.1000,  0.1000]],\n",
-       "\n",
-       "         [[-0.1000,  0.1000, -0.1000],\n",
-       "          [-0.1000,  0.1000,  0.1000],\n",
-       "          [-0.1000, -0.1000,  0.1000]],\n",
-       "\n",
-       "         [[-0.1000,  0.1000, -0.1000],\n",
-       "          [-0.1000, -0.1000, -0.1000],\n",
-       "          [ 0.1000,  0.1000, -0.1000]]]], grad_fn=<MulBackward0>), scale=tensor(0.1000, grad_fn=<AbsBinarySignGradFnBackward>), zero_point=tensor(0.), bit_width=tensor(1.), signed_t=None, training_t=tensor(True))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'NoneType' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/giuseppe/Documents/git/brevitas/notebooks/03_anatomy_of_a_quantizer.ipynb Cell 24\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bremote-host/home/giuseppe/Documents/git/brevitas/notebooks/03_anatomy_of_a_quantizer.ipynb#X32sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbrevitas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m \u001b[39mimport\u001b[39;00m QuantConv2d\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bremote-host/home/giuseppe/Documents/git/brevitas/notebooks/03_anatomy_of_a_quantizer.ipynb#X32sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m binary_weight_quant_conv \u001b[39m=\u001b[39m QuantConv2d(\u001b[39m3\u001b[39m, \u001b[39m2\u001b[39m, (\u001b[39m3\u001b[39m,\u001b[39m3\u001b[39m), weight_quant\u001b[39m=\u001b[39mMyBinaryWeightQuantizer)\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bremote-host/home/giuseppe/Documents/git/brevitas/notebooks/03_anatomy_of_a_quantizer.ipynb#X32sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m quant_weight \u001b[39m=\u001b[39m binary_weight_quant_conv\u001b[39m.\u001b[39;49mquant_weight()\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bremote-host/home/giuseppe/Documents/git/brevitas/notebooks/03_anatomy_of_a_quantizer.ipynb#X32sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m quant_weight\n",
+      "File \u001b[0;32m~/Documents/git/brevitas/src/brevitas/nn/mixin/parameter.py:103\u001b[0m, in \u001b[0;36mQuantWeightMixin.quant_weight\u001b[0;34m(self, quant_input, subtensor_slice_list)\u001b[0m\n\u001b[1;32m    100\u001b[0m     out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweight_quant(\n\u001b[1;32m    101\u001b[0m         weights_to_quantize[weight_slice_tuple], input_bit_width, input_is_signed)\n\u001b[1;32m    102\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 103\u001b[0m     out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight_quant(weights_to_quantize[weight_slice_tuple])\n\u001b[1;32m    104\u001b[0m \u001b[39mif\u001b[39;00m subtensor_slice_list \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    105\u001b[0m     \u001b[39m# Restore the quantizer behaviour to full tensor quantization\u001b[39;00m\n\u001b[1;32m    106\u001b[0m     \u001b[39m# The modules to slice should have been cached already at this point\u001b[39;00m\n\u001b[1;32m    107\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_cached_sub_tensor_slice_list_modules \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m, \u001b[39m\"\u001b[39m\u001b[39mMissing cache of modules to slice.\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "File \u001b[0;32m~/miniconda3/envs/torch_2.1/lib/python3.11/site-packages/torch/nn/modules/module.py:1518\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1516\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1518\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_impl(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/miniconda3/envs/torch_2.1/lib/python3.11/site-packages/torch/nn/modules/module.py:1527\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1522\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1523\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1524\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1525\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1526\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1527\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1529\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1530\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/git/brevitas/src/brevitas/proxy/parameter_quant.py:101\u001b[0m, in \u001b[0;36mWeightQuantProxyFromInjector.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     99\u001b[0m     impl \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexport_handler \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexport_mode \u001b[39melse\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtensor_quant\n\u001b[1;32m    100\u001b[0m     out, scale, zero_point, bit_width \u001b[39m=\u001b[39m impl(x)\n\u001b[0;32m--> 101\u001b[0m     \u001b[39mreturn\u001b[39;00m QuantTensor(out, scale, zero_point, bit_width, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mis_signed, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtraining)\n\u001b[1;32m    102\u001b[0m \u001b[39melse\u001b[39;00m:  \u001b[39m# quantization disabled\u001b[39;00m\n\u001b[1;32m    103\u001b[0m     \u001b[39mreturn\u001b[39;00m x\n",
+      "File \u001b[0;32m~/Documents/git/brevitas/src/brevitas/quant_tensor/__init__.py:71\u001b[0m, in \u001b[0;36mQuantTensor.__new__\u001b[0;34m(cls, value, scale, zero_point, bit_width, signed, training)\u001b[0m\n\u001b[1;32m     69\u001b[0m     bit_width \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor(bit_width, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat)\n\u001b[1;32m     70\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(signed, torch\u001b[39m.\u001b[39mTensor):\n\u001b[0;32m---> 71\u001b[0m     signed \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mtensor(signed, dtype\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49mbool)\n\u001b[1;32m     72\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(training, torch\u001b[39m.\u001b[39mTensor):\n\u001b[1;32m     73\u001b[0m     training \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor(training, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mbool)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object cannot be interpreted as an integer"
+     ]
     }
    ],
    "source": [
@@ -513,39 +496,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "QuantTensor(value=tensor([[[[-0.1000,  0.1000,  0.1000],\n",
-       "          [ 0.1000,  0.1000, -0.1000],\n",
-       "          [-0.1000,  0.1000, -0.1000]],\n",
+       "QuantTensor(value=tensor([[[[ 0.1000, -0.1000,  0.1000],\n",
+       "          [ 0.1000, -0.1000,  0.1000],\n",
+       "          [-0.1000, -0.1000,  0.1000]],\n",
        "\n",
        "         [[ 0.1000, -0.1000,  0.1000],\n",
-       "          [ 0.1000, -0.1000,  0.1000],\n",
+       "          [-0.1000,  0.1000, -0.1000],\n",
        "          [-0.1000,  0.1000, -0.1000]],\n",
        "\n",
-       "         [[-0.1000, -0.1000, -0.1000],\n",
-       "          [ 0.1000,  0.1000, -0.1000],\n",
-       "          [ 0.1000, -0.1000, -0.1000]]],\n",
+       "         [[ 0.1000,  0.1000,  0.1000],\n",
+       "          [-0.1000,  0.1000,  0.1000],\n",
+       "          [ 0.1000,  0.1000, -0.1000]]],\n",
        "\n",
        "\n",
        "        [[[ 0.1000,  0.1000,  0.1000],\n",
-       "          [ 0.1000, -0.1000,  0.1000],\n",
-       "          [ 0.1000, -0.1000,  0.1000]],\n",
-       "\n",
-       "         [[ 0.1000,  0.1000, -0.1000],\n",
        "          [ 0.1000, -0.1000, -0.1000],\n",
        "          [-0.1000,  0.1000, -0.1000]],\n",
        "\n",
+       "         [[ 0.1000,  0.1000, -0.1000],\n",
+       "          [-0.1000,  0.1000,  0.1000],\n",
+       "          [-0.1000,  0.1000,  0.1000]],\n",
+       "\n",
        "         [[-0.1000, -0.1000, -0.1000],\n",
        "          [ 0.1000,  0.1000,  0.1000],\n",
-       "          [-0.1000, -0.1000, -0.1000]]]], grad_fn=<MulBackward0>), scale=tensor(0.1000, grad_fn=<AbsBinarySignGradFnBackward>), zero_point=tensor(0.), bit_width=tensor(1.), signed_t=tensor(True), training_t=tensor(True))"
+       "          [-0.1000,  0.1000, -0.1000]]]], grad_fn=<MulBackward0>), scale=tensor(0.1000, grad_fn=<AbsBinarySignGradFnBackward>), zero_point=tensor(0.), bit_width=tensor(1.), signed_t=tensor(True), training_t=tensor(True))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,11 +544,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert signed_quant_weight.is_valid == True"
+    "assert signed_quant_weight.is_valid"
    ]
   },
   {
