--- a/notebooks/quantized_recurrent.ipynb
+++ b/notebooks/quantized_recurrent.ipynb
@@ -35,7 +35,7 @@
        "            hidden_size: int,\n",
        "            num_layers: int = 1,\n",
        "            nonlinearity: str = 'tanh',\n",
-       "            bias: bool = True,\n",
+       "            bias: Optional[bool] = True,\n",
        "            batch_first: bool = False,\n",
        "            bidirectional: bool = False,\n",
        "            weight_quant=Int8WeightPerTensorFloat,\n",
@@ -83,6 +83,11 @@
     "import torch\n",
     "torch.manual_seed(0)\n",
     "\n",
+    "# helpers\n",
+    "def assert_with_message(condition):\n",
+    "    assert condition\n",
+    "    print(condition)\n",
+    "\n",
     "def pretty_print_source(source):\n",
     "    display(Markdown('```python\\n' + source + '\\n```'))\n",
     "    \n",
@@ -111,7 +116,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:77: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -471,7 +476,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/miniconda3/envs/torch_2.1/lib/python3.11/site-packages/torch/_tensor.py:1362: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at /opt/conda/conda-bld/pytorch_1695392026823/work/c10/core/TensorImpl.h:1900.)\n",
+      "/scratch/fabian/miniforge3/envs/torchgpu/lib/python3.11/site-packages/torch/_tensor.py:1362: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/c10/core/TensorImpl.h:1900.)\n",
       "  return super().rename(names)\n"
      ]
     },
@@ -645,7 +650,16 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.nn import RNN\n",
     "from brevitas.nn import QuantRNN\n",
@@ -664,9 +678,9 @@
     "# Generate random input\n",
     "inp = torch.randn(5, 2, 10)\n",
     "# Check outputs are the same\n",
-    "assert torch.allclose(quant_rnn(inp)[0], float_rnn(inp)[0], atol=ATOL)\n",
+    "assert_with_message(torch.allclose(quant_rnn(inp)[0], float_rnn(inp)[0], atol=ATOL))\n",
     "# Check hidden states are the same\n",
-    "assert torch.allclose(quant_rnn(inp)[1], float_rnn(inp)[1], atol=ATOL)"
+    "assert_with_message(torch.allclose(quant_rnn(inp)[1], float_rnn(inp)[1], atol=ATOL))"
    ]
   },
   {
@@ -765,7 +779,7 @@
        "            input_size: int,\n",
        "            hidden_size: int,\n",
        "            num_layers: int = 1,\n",
-       "            bias: bool = True,\n",
+       "            bias: Optional[bool] = True,\n",
        "            batch_first: bool = False,\n",
        "            bidirectional: bool = False,\n",
        "            weight_quant=Int8WeightPerTensorFloat,\n",
@@ -963,7 +977,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f32df21d190>"
+       "<IPython.lib.display.IFrame at 0x7fc849b718d0>"
       ]
      },
      "execution_count": 19,
@@ -992,7 +1006,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-02 10:22:46.461627098 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_93 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
+      "2024-02-15 10:20:15.222259670 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_93 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
      ]
     }
    ],
@@ -1061,7 +1075,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-02 10:22:49.697482752 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_87 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
+      "2024-02-15 10:20:22.930760716 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_87 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
      ]
     }
    ],
@@ -1092,7 +1106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:77: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -1138,7 +1152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:77: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -1185,7 +1199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:77: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -1233,7 +1247,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f32dd765bd0>"
+       "<IPython.lib.display.IFrame at 0x7fc96dabe810>"
       ]
      },
      "execution_count": 29,
@@ -1262,7 +1276,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giuseppe/Documents/git/brevitas/src/brevitas/nn/mixin/base.py:78: UserWarning: Keyword arguments are being passed but they not being used.\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:77: UserWarning: Keyword arguments are being passed but they not being used.\n",
       "  warn('Keyword arguments are being passed but they not being used.')\n"
      ]
     }
@@ -1311,7 +1325,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f32df217b90>"
+       "<IPython.lib.display.IFrame at 0x7fc848d0e790>"
       ]
      },
      "execution_count": 31,
@@ -1389,7 +1403,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f32dd2f7c10>"
+       "<IPython.lib.display.IFrame at 0x7fc848836410>"
       ]
      },
      "execution_count": 33,
@@ -1469,7 +1483,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_latest",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1485,7 +1499,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "c90b4b2913cf255302969887b74954c34035fee81e7901b217735b8a389ceb78"
@@ -1493,5 +1506,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
