Fix (notebooks): remove double parenthesis and other style fixes

--- a/notebooks/02_quant_activation_overview.ipynb
+++ b/notebooks/02_quant_activation_overview.ipynb
@@ -358,7 +358,7 @@
    "source": [
     "return_disabled_quant_relu = QuantReLU(act_quant=None, return_quant_tensor=True)\n",
     "relu_out_tensor = return_disabled_quant_relu(out_tensor)\n",
-    "assert_with_message((relu_out_tensor.is_valid==True))\n",
+    "assert_with_message(relu_out_tensor.is_valid)\n",
     "assert_with_message(relu_out_tensor.scale == out_tensor.scale)\n",
     "assert_with_message(relu_out_tensor.zero_point == out_tensor.zero_point)\n",
     "assert_with_message(relu_out_tensor.bit_width == out_tensor.bit_width)"
