--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -73,6 +73,11 @@
     "from brevitas.nn import QuantLinear\n",
     "from IPython.display import Markdown, display\n",
     "\n",
+    "# helpers\n",
+    "def assert_with_message(condition):\n",
+    "    assert condition\n",
+    "    print(condition)\n",
+    "\n",
     "def pretty_print_source(source):\n",
     "    display(Markdown('```python\\n' + source + '\\n```'))\n",
     "    \n",
@@ -866,7 +871,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_61612/661358273.py:7: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
+      "/tmp/ipykernel_86658/661358273.py:7: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
       "  quant_output = torch.tanh(quant_input)\n"
      ]
     }
@@ -929,9 +934,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_61612/3932472163.py:8: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
+      "/tmp/ipykernel_86658/3932472163.py:8: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
       "  train_mode_cat = torch.cat([quant_identity(float_inp1), quant_identity(float_inp2)], dim=1)\n",
-      "/tmp/ipykernel_61612/3932472163.py:14: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
+      "/tmp/ipykernel_86658/3932472163.py:14: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
       "  eval_mode_cat = torch.cat([eval_quant_inp1, eval_quant_inp2], dim=1)\n"
      ]
     }
@@ -1823,14 +1828,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
@@ -1846,7 +1848,7 @@
     "quant_identity_bit_width = quant_identity.act_quant.fused_activation_quant_proxy.tensor_quant.msb_clamp_bit_width_impl\n",
     "quant_linear_bit_width = quant_linear.weight_quant.tensor_quant.msb_clamp_bit_width_impl\n",
     "\n",
-    "quant_identity_bit_width is quant_linear_bit_width"
+    "assert_with_message(quant_identity_bit_width is quant_linear_bit_width)"
    ]
   },
   {
@@ -2554,7 +2556,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8f9255ff10>"
+       "<IPython.lib.display.IFrame at 0x7fb208193710>"
       ]
      },
      "execution_count": 42,
@@ -2800,7 +2802,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8f925ee7d0>"
+       "<IPython.lib.display.IFrame at 0x7fb208174650>"
       ]
      },
      "execution_count": 44,
@@ -2894,7 +2896,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8f92604090>"
+       "<IPython.lib.display.IFrame at 0x7fb208192e50>"
       ]
      },
      "execution_count": 46,
